assets/chat/css/style.scss
/* ... */
#chat-whisper-users {
    min-width: $menu-width-max;
    .content > ul {
        margin: 0;
        padding: 10px 0;
    }
    .conversation {
        list-style: none;
        position: relative;
        cursor: pointer;
        padding-left: 10px;
        line-height: 22px;
        .user {
            color: $color-accent;
            display: block;
        }
        .user:hover {
            color: $color-accent-light;
            .badge {
                color: $color-chat-text1;
            }
        }
        .badge {
            line-height: 18px;
            font-size: 12px;
            padding: 0 5px;
            display: inline-block;
            background: $color-surface-dark4;
            border-radius: 8px;
            margin: 2px 0;
            color: $color-chat-text2;
        }
        .badge, .remove {
            float: right;
            margin-right: 10px;
        }
        .remove {
            display: inline-block;
            text-decoration: none;
            text-align: center;
            line-height: 22px;
            width: 22px;
            height: 22px;
        }
        .remove:hover {
            color: $color-light;
        }
    }
    .unread-0 .badge {
        display: none;
    }
    .unread-0 .user,
    .unread-0 .user:hover {
        color: $text-color1;
    }
    .empty {
        color: $text-color1;
        margin: 12px;
    }
}
#chat-user-list {
    .user {
        margin: 0;
        padding: 0 32px;
        display: block;
        cursor: pointer;
        text-decoration: none;
        position: relative;
        line-height: 22px;

        .whisper-nick {
            display: none;
            padding: 3px;
            color: $text-color2;
            position: absolute;
            top: 0;
            left: 8px;
        }
        .whisper-nick:hover {
            color: $text-color;
        }
        &:hover .whisper-nick {
            display: block;
        }
    }
    .content {
        padding: 20px 0;
    }
    .scrollable {
        max-height: calc(100% - 70px);
    }
    &.search-in .user {
        display: none;
    }
    &.search-in .user.found {
        display: block;
    }
    input {
        padding: 13px 15px;
        border: none;
        background: none;
        border-radius: 0;
    }
}
#chat-settings {

    #chat-settings-form {
        margin: 20px 0;
    }

    .tools {
        margin: 0;
        padding: 0;
    }

    .form-group {
        margin: 12px 20px;
        display: block;
        position: relative;
    }
    .form-group:first-child {
        margin-top: 10px;
    }
    .form-group:last-child {
        margin-bottom: 10px;
    }

    .enable-notifications-btn {
        position: absolute;
        right: 0;
        margin-top: -33px;
        margin-right: 2.5em;
        padding: 4px 13px;
        background: none;
        border-radius: 20px;
        border: 1px dashed;
        font-size: 12px;
        opacity: 0.6;
        cursor: pointer;


        &:not([disabled]) {
            color: #ff8700;
            border-color: #ff8700;

            &:hover {
                opacity: 1;
            }
        }

        &:disabled {
            color: #0a0;
            border-color: #0a0;
            cursor: default;
        }
    }

    fieldset {
        border: none;
        padding: 0;
        margin: 0;
        margin-top: -8px;

        &:disabled {
            opacity: 0.5;
        }
    }

    hr {
        margin-left: 20px;
        margin-right: 20px;
    }
    h4 {
        font-size:90%;
        margin-top: 25px;
        margin-bottom: 10px;
        padding-left: 18px;
        color: $text-color-disabled;
        text-transform: uppercase;
        font-weight: 600;
    }
    label {
        display: inline-block;
        font-weight: normal;
        max-width: 100%;
        margin-bottom: 5px;
    }
    .checkbox label {
        min-height: 20px;
        padding-left: 20px;
        margin-bottom: 0;
        font-weight: 400;
        cursor: pointer;
        display: inline-block;
        max-width: 100%;
    }
    .checkbox input {
        appearance: none;
        font: normal normal normal 14px FontAwesome;
        color: #aaa;
        position: absolute;
        margin: 3px 0 0 -20px;
        line-height: normal;
        box-sizing: border-box;
        padding: 0;

        &:after {
            content: '\f0c8';
        }

        &:checked::after {
            content: '\f14a';
        }
    }
    select {
        border-radius: 4px;
        width: 100%;
        display: block;
        padding: 5px;
    }
}

/* Loading / login screens */
#chat-login-screen {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background: rgba($color-surface-dark1,0.75);
    position: absolute;
    text-align: center;
    top:0;
    left:0;
    right:0;
    bottom:0;
    h2 {
        font-size: 28px;
        font-weight: normal;
        margin: 0;
    }
    p {
        margin: 15px 0 20px 0;
    }
}
#chat-loading {
    opacity: 0.2;
    display: flex;
    align-items: center;
    justify-content: center;
    position: absolute;
    top:0;
    left:0;
    bottom:0;
    right:0;
    display: none;
}

/* Settings */
.pref-showtime .time {
    display: inline !important;
}
.pref-hideflairicons .features {
    display: none;
}

.pref-autocompletehelper #chat-auto-complete.active {
    opacity: 1;
}

/* Nano */
.nano {
    position : relative;
    width    : 100%;
    height   : 100%;
    overflow : hidden;
}
.nano > .nano-content {
    overflow-anchor : none;
    position        : absolute;
    overflow        : scroll;
    overflow-x      : hidden;
    top             : 0;
    right           : 0;
    bottom          : 0;
    left            : 0;
}
.nano > .nano-content:focus {
    outline: none;
}
.nano > .nano-content::-webkit-scrollbar {
    display: none;
}
.has-scrollbar > .nano-content::-webkit-scrollbar {
    display: block;
}
/* ... */

